--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="contenido">
     <section id="encabezado">
-      <head>
+      <head class="encabezado">
         <h1>Comenzando con la fotografía</h1>
            <a href="../Desarrollador_WEB_Denzel_F_Carcamo/index.html">Inicio</a>
            <a href="../Desarrollador_WEB_Denzel_F_Carcamo/paisajes.html">Paisajes</a>
@@ -28,7 +28,8 @@
     </div>
 
     <footer>
-      <div class="Frase">
+      <div class="terminos">
+        <strong><h1>Terminos</h1></strong>
         <p>
           "El político se convierte en estadista cuando comienza a pensar en las próximas generaciones y no en las próximas elecciones." </br></br>
 
@@ -36,21 +37,25 @@
         </p>
       </div>
       <div class="red_social">
+        <strong><h1>Redes Sociales</h1></strong>
         <p>
          <a href="https://www.facebook.com">Facebook</a>
          <a href="https://www.instagram.com">Instagram</a>
          <a href="https://www.twitter.com">Twitter</a>
         </p>
       </div>
-      <div class="Derechos">
+      <div class="contacto">
         <p>
-          <h2>Contacto:</h2>
+          <strong><h1>Contacto:</h1></strong>
           Denzel Fabirzio Carcamo Gehl</br>
           Barrio: barandillas, 3 calle, 7 ave.</br>
           Tel: 22255500</br>
           Mail:denzelgehl42@gmail.com</br>
-          @Derechos Revservados 2017
         </p>
+      </div>
+      <div class="derechos">
+        <strong><h1>Derechos</h1></strong>
+        <p>@Derechos Revservados 2017</p>
       </div>
     </footer>
     </div>
