--- a/retratos.html
+++ b/retratos.html
@@ -43,36 +43,40 @@
      </div>
      </div>
     </ul>
-
   </section>
-  <footer>
-    <div class="Frase">
-      <p>
-        "El político se convierte en estadista cuando comienza a pensar en las próximas generaciones y no en las próximas elecciones." </br></br>
 
-        Winston Churchill
-      </p>
-    </div>
-    <div class="red_social">
-      <p>
-       <a href="https://www.facebook.com">Facebook</a>
-       <a href="https://www.instagram.com">Instagram</a>
-       <a href="https://www.twitter.com">Twitter</a>
-      </p>
-    </div>
-    <div class="Derechos">
-      <p>
-        <h2>Contacto:</h2>
-        Denzel Fabirzio Carcamo Gehl</br>
-        Barrio: barandillas, 3 calle, 7 ave.</br>
-        Tel: 22255500</br>
-        Mail:denzelgehl42@gmail.com</br>
-        @Derechos Revservados 2017
-      </p>
-    </div>
-  </footer>
+   <footer>
+     <div class="terminos">
+       <strong><h1>Terminos</h1></strong>
+       <p>
+         "El político se convierte en estadista cuando comienza a pensar en las próximas generaciones y no en las próximas elecciones." </br></br>
+
+         Winston Churchill
+       </p>
+     </div>
+     <div class="red_social">
+       <strong><h1>Redes Sociales</h1></strong>
+       <p>
+        <a href="https://www.facebook.com">Facebook</a>
+        <a href="https://www.instagram.com">Instagram</a>
+        <a href="https://www.twitter.com">Twitter</a>
+       </p>
+     </div>
+     <div class="contacto">
+       <p>
+         <h1>Contacto:</h1>
+         Denzel Fabirzio Carcamo Gehl</br>
+         Barrio: barandillas, 3 calle, 7 ave.</br>
+         Tel: 22255500</br>
+         Mail:denzelgehl42@gmail.com</br>
+       </p>
+     </div>
+     <div class="derechos">
+       <strong><h1>Derechos</h1></strong>
+       <p>@Derechos Revservados 2017</p>
+     </div>
+   </footer>
   </div>
-</body>
+ </body>
 
-</body>
 </html>
