--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="contenido">
     <section id="encabezado">
-      <head class="encabezado">
+      <head>
         <h1>Comenzando con la fotografía</h1>
            <a href="../Desarrollador_WEB_Denzel_F_Carcamo/index.html">Inicio</a>
            <a href="../Desarrollador_WEB_Denzel_F_Carcamo/paisajes.html">Paisajes</a>
@@ -31,7 +31,7 @@
       <div class="terminos">
         <strong><h1>Terminos</h1></strong>
         <p>
-          "El político se convierte en estadista cuando comienza a pensar en las próximas generaciones y no en las próximas elecciones." </br></br>
+          "El político se convierte en estadista cuando comienza a pensar </br> en las próximas generaciones y no en las próximas elecciones." </br></br>
 
           Winston Churchill
         </p>
@@ -45,8 +45,8 @@
         </p>
       </div>
       <div class="contacto">
-        <p>
           <strong><h1>Contacto:</h1></strong>
+          <p>
           Denzel Fabirzio Carcamo Gehl</br>
           Barrio: barandillas, 3 calle, 7 ave.</br>
           Tel: 22255500</br>
